# torch-knn

./: .flake8  .pre-commit-config.yaml  README.rst  pyproject.toml
torch_knn/: constants.py  metrics.py  metrics_test.py  pipeline.py  pipeline_test.py  utils.py  utils_test.py
torch_knn/index/: __init__.py  base.py  base_test.py  ivf_flat.py  ivf_flat_test.py  ivf_pq.py  ivf_pq_test.py  linear_flat.py  linear_flat_test.py  linear_pq.py  linear_pq_test.py
torch_knn/module/: __init__.py  distances.py  distances_test.py  ivf.py  ivf_test.py  kmeans.py  kmeans_test.py  metrics_test.py
torch_knn/normalize/: __init__.py  base.py  l2_norm.py  l2_norm_test.py
torch_knn/storage/: __init__.py  base.py  base_test.py  flat.py  flat_test.py  pq.py  pq_test.py
torch_knn/transform/: __init__.py  base.py  base_test.py  l2_normalization.py  l2_normalization_test.py  opq.py  opq_test.py  pca.py  pca_test.py
