[tool.poetry]
name = "torch-knn"
version = "0.1.0"
description = "kNN library for PyTorch"
authors = ["Hiroyuki Deguchi <deguchi.hiroyuki.db0@is.naist.jp>"]
readme = "README.rst"
packages = [{include = "torch_knn"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.1"
h5py = "^3.8.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"
mypy = "^1.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
