[tool.poetry]
name = "torch-knn"
version = "0.1.1"
description = "kNN library for PyTorch"
authors = ["Hiroyuki Deguchi <deguchi.hiroyuki.db0@is.naist.jp>"]
readme = "README.rst"
packages = [{include = "torch_knn"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
numpy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.4.10"
mypy = "^1.10.1"
pre-commit = "^3.7.1"

[tool.coverage.run]
omit = ["*_test.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
